backend/tests/corpus/shadowing-pos-006.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  labels:
    cape-test-case: shadowing-pos-006
    owner-team: team-beta
  name: img-policy-shadowing-pos-006
spec:
  match:
    kinds:
    - apiGroups:
      - ''
      kinds:
      - Pod
    namespaces:
    - shadow-ns-shadowing-pos-006-0
  parameters:
    repos:
    - mycompany.com/
